<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AddNewTerm"
    tools:showIn="@layout/activity_add_new_term">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/course_name"
        android:id="@+id/courseNameTitle"
        android:layout_alignParentTop="true"/>

    <EditText
        android:id="@+id/courseName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/courseNameTitle"
         />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/start_date"
        android:id="@+id/startDateTitle"
        android:layout_below="@id/courseName"/>


    <EditText
        android:id="@+id/editTextStartDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/startDateTitle"
        android:focusableInTouchMode="false"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/end_date"
        android:layout_below="@id/editTextStartDate"
        android:id="@+id/endDateTitle"/>


    <EditText
        android:id="@+id/editTextEndDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/endDateTitle"
        android:focusableInTouchMode="false"
        android:layout_centerHorizontal="true" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextEndDate"
        android:spinnerMode="dropdown"
        android:id="@+id/courseStatus"/>

    <Button
        android:id="@+id/addCourse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/courseStatus"
        android:layout_centerHorizontal="true"
        android:text="Add Course"/>
</android.widget.RelativeLayout>